--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title></title>
@@ -33,8 +34,9 @@
           <div id="question-container"></div>
           <div id="answer-container"></div>
           <div id="correct-answer-counter-container"></div>
+          <div id="strike-container"></div>
         </div>
-        <div id="strike-container"></div>
+
         <div id="post-game-option-container"></div>
     </div>
 
