--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div id="question-container"></div>
           <div id="answer-container"></div>
           <div id="correct-answer-counter-container"></div>
-          <div id="strike-container"></div>
+          <div id="heart-container"></div>
         </div>
 
         <div id="post-game-option-container"></div>
