--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <button class="button-login" id="login-submit-button" type="button" value="Login">Login</button>
       </form>
 
-      <h4 class="login-note">The game will start immediately upon login</h4>
-      <p id="home-view-scoreboard" class="login-note">Click here to view the scoreboard</p>
+      <button class="button-login" id="home-scoreboard-button" type="button" value="Login">Leaderboard</button>
+
+      <!-- <p id="home-view-scoreboard" class="login-note">Click here to view the scoreboard</p> -->
 
     </div>
 
