working on login

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h1 id="game-title">Mental Math</h1>
       <form id="login-form">
         <input class="button-login" id="login-field" placeholder="Enter username"></input>
+        <input id="enter" type="submit" value="Login" style="display: none"></input>
         <button class="button-login" id="login-submit-button" type="button" value="Login">Login</button>
       </form>
 
