some css improved

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <div id="landing-container">
       <h1 id="game-title">Mental Math</h1>
       <form id="login-form">
-        <input class="button-login" id="login-field" placeholder="Enter username"></input>
+        <input class="more-buttons button-login" id="login-field" placeholder="Enter username"></input>
         <input id="enter" type="submit" value="Login" style="display: none"></input>
-        <button class="button-login" id="login-submit-button" type="button" value="Login">Login</button>
+        <button class="more-buttons button-login" id="login-submit-button" type="button" value="Login">Login</button>
       </form>
 
-      <button class="button-login" id="home-scoreboard-button" type="button" value="Login">Leaderboard</button>
-
-      <!-- <p id="home-view-scoreboard" class="login-note">Click here to view the scoreboard</p> -->
+      <button class="more-buttons button-login" id="home-scoreboard-button" type="button" value="Login">Leaderboard</button>
 
     </div>
 
