--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
+    <audio src="mp3/correct.mp3" id="correct"></audio>
+    <audio src="mp3/wrong.mp3" id="wrong"></audio>
+    <audio src="mp3/gameOver.mp3" id="gameOver"></audio>
   </head>
 
   <body>
