--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <audio src="mp3/correct.mp3" id="correct"></audio>
     <audio src="mp3/wrong.mp3" id="wrong"></audio>
     <audio src="mp3/gameOver.mp3" id="gameOver"></audio>
+    <audio src="mp3/winner.mp3" id="winner"></audio>
   </head>
 
   <body>
